--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,8 @@
 name = "dali-climbing-website"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = "dist"
 
 [build]
 command = "npm run build"
 cwd = "."
 watch_dir = "src"
-
-[build.upload]
-format = "service-worker"
-dir = "dist"
-main = "./index.html"
-
-[[pages_build_output_dir]]
-value = "dist"
